[package]
name = "rust_todo_app"
version = "0.1.0"
authors = ["atte <atte.h.1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"